--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="shadow-sm p-3 mb-5 bg-white rounded-3">
                             <div class="card border border-white">
                                 <div class="card-img text-center p-3 rounded-3">
-                                  <img class="w-75" src="/Image/women-jacket-2.png" class="card-img-top" alt="...">
+                                  <img class="w-75" src="./Image/women-jacket-2.png" class="card-img-top" alt="...">
                                 </div>
                               <div class="card-body">
                                 <h5 class="card-title fw-bold">Ladies Jacket</h5>
